{
    "name": "UI",
    "maps": [
        {
            "name": "MenuPage",
            "id": "e58c387f-bd98-41e7-92bb-45619fb40ac3",
            "actions": [
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "4adec6a6-ec2f-41f5-bc7d-fba43b86655c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0b958e63-dfb3-4189-8d8e-fd1e942577fe",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed617883-f6b9-4a9f-b1e2-72111fec4423",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PausePage",
            "id": "3d46d405-c2af-4bdb-98e1-66ae2e90cea9",
            "actions": [
                {
                    "name": "Continue",
                    "type": "Button",
                    "id": "c4b406a9-65b7-4ed2-877d-1d928662969b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "2143559f-9015-4c9f-8a81-9b420fc1c3d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "8f4ec127-d01c-4584-a87d-993c8fedcd49",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "33473fa1-4d79-4c9e-8374-0ea2569917f8",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a5d7843-01a9-442d-9199-62386d5d4ee3",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fa61835-0b7f-4be4-9d2b-292ae71a9a76",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameOverPage",
            "id": "70fb4bd9-bac3-4c57-887c-d937e8245fc7",
            "actions": [
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "4fd9ebab-8f7a-42e4-8091-364e9a14a32b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "52511a4f-c1bf-4870-bd27-bfd70398e741",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9727747e-8a12-42ca-ad4d-630520ebf36c",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1506fe91-dc03-483a-abcd-5eadca30ac46",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameplayPage",
            "id": "d470f7b4-fbaa-400e-af25-6e53b3c40cd9",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "0b29c93b-a156-4610-996d-42a946bceebb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "daacec8b-e3a6-4ecc-9623-45902a383d1e",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}